--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,20 +16,22 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="60dp"/>
 
-    <Button
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:backgroundTint="#ffb703"
         android:gravity="center"
-        android:text="+"
         android:textAlignment="center"
         android:textSize="40sp"
         android:textColor="@color/black"
+        app:fabCustomSize="70dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginRight="60dp"
-        android:layout_marginBottom="60dp"/>
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="60dp"
+        android:src="@drawable/add"
+        android:contentDescription="@string/app_name"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
