--- a/app/src/main/res/layout/activity_task_addition.xml
+++ b/app/src/main/res/layout/activity_task_addition.xml
@@ -7,15 +7,6 @@
     android:background="#22223b"
     tools:context=".TaskAddition">
 
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:id="@+id/rclrView"-->
-<!--        android:layout_width="300dp"-->
-<!--        android:layout_height="500dp"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        android:layout_marginTop="60dp"/>-->
-
     <EditText
         android:id="@+id/editTextTextMultiLine"
         android:layout_width="300dp"
@@ -27,21 +18,25 @@
         android:layout_marginTop="60dp"
         android:textCursorDrawable="@null"
         android:textColor="@color/white"
-        android:shadowColor="@color/teal_200"/>
+        android:shadowColor="@color/teal_200"
+        android:hint="Click to add task..."
+        android:textColorHint="@color/white"
+        android:gravity="center"/>
 
-    <Button
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/tick"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:backgroundTint="#ffb703"
         android:gravity="center"
-        android:text="\u2713"
         android:textAlignment="center"
         android:textSize="40sp"
+        android:src="@drawable/tick"
+        app:fabCustomSize="70dp"
         android:textColor="@color/black"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginRight="60dp"
+        android:layout_marginEnd="60dp"
         android:layout_marginBottom="60dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
